--- a/misc/window/components/Panels.less
+++ b/misc/window/components/Panels.less
@@ -11,14 +11,12 @@
 
 .panels {
     width: 100%;
-    height: calc(100% - 4rem);
-    padding-top: 4rem;
-
+    height: 100%;
+    position: relative;
     .panel {
         position: absolute;
         opacity: 0;
         width: 100%;
-        height: 100%;
         pointer-events: none;
 
         transition: opacity ease-in-out 300ms;
