--- a/src/renderer/components/Application.scss
+++ b/src/renderer/components/Application.scss
@@ -123,7 +123,11 @@ button {
 }
 
 .window-content{
-  height: 100%;
+  height: calc(100% - 4rem);
+  padding-top: 4rem;
+  width: 100%;
+  position: absolute;
+  z-index: 0;
 }
 
 .main-heading {
