--- a/src/renderer/components/Theme.scss
+++ b/src/renderer/components/Theme.scss
@@ -21,7 +21,7 @@
   --app-font-size: 16px;
   --app-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --app-bgcolor: #202020;
+  --app-bgcolor: #202020;  
   --app-border-color: #3b3f44;
 
   // Scrollbar
@@ -63,6 +63,7 @@
 
   // ERWT
   --erwt-heading-color: #dddddd;
+  --app-color: #999999;
 }
 
 /*
@@ -115,6 +116,7 @@ body:not(.dark-mode) {
 
   // ERWT
   --erwt-heading-color: #282828;
+  --app-color: #555555;
 
   // Overrides
   .main-teaser {
