--- a/misc/window/components/Tabs.less
+++ b/misc/window/components/Tabs.less
@@ -35,10 +35,10 @@
 
 .tabs .tab {
     transition: All 150ms ease-out;
-    filter: grayscale(0.8);
+    filter: grayscale(0.2);
     opacity: 0.5;
     text-transform: uppercase;
-    font-family: var(--app-font-family);
+    text-shadow: unset;
     background: #191919;
     color: #d1d1d1;
     text-align: center;
