--- a/src/renderer/components/Theme.scss
+++ b/src/renderer/components/Theme.scss
@@ -15,13 +15,30 @@
  * Here we define the Dark Theme (stylesheet) for application.
  */
 
+
+/// Replace `$search` with `$replace` in `$string`
+/// @author Hugo Giraudel
+/// @param {String} $string - Initial string
+/// @param {String} $search - Substring to replace
+/// @param {String} $replace ('') - New value
+/// @return {String} - Updated string
+@function str-replace($string, $search, $replace: '') {
+  $index: str-index($string, $search);
+
+  @if $index {
+    @return str-slice($string, 1, $index - 1)+$replace +str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+  }
+
+  @return $string;
+}
+
 :root {
   // Application
   --app-accent-color: #32639f;
   --app-font-size: 16px;
   --app-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --app-bgcolor: #202020;  
+  --app-bgcolor: #202020;
   --app-border-color: #3b3f44;
 
   // Scrollbar
@@ -41,25 +58,6 @@
   --button-hover-bgcolor: hsl(0, 0%, 24%);
   --button-active-bgcolor: hsl(0deg 0% 20%);
   --button-shadow-color: #00000078;
-
-  // Titlebar
-  --titlebar-bgcolor: hsl(0deg 0% 10%);
-  --titlebar-color: hsl(0, 0%, 85%);
-  --titlebar-title-color: hsl(0, 0%, 85%);
-  --titlebar-menu-border-color: #2d2c2c;
-  --titlebar-menu-title-hover-bgcolor: hsl(0deg 0% 12%);
-  --titlebar-menu-title-active-bgcolor: hsl(0deg 0% 14%);
-  --titlebar-menu-title-active-border-color: var(--titlebar-menu-border-color);
-  --titlebar-menu-separator-bgcolor: var(--titlebar-menu-border-color);
-  --titlebar-popup-bgcolor: hsl(0deg 0% 14%);
-  --titlebar-popup-border: 1px solid var(--titlebar-menu-border-color);
-  --titlebar-popup-shadow: 4px 10px 10px rgba(0, 0, 0, 0.2);
-  --titlebar-popup-item-name-color: hsl(0, 0%, 75%);
-  --titlebar-popup-item-shortcut-color: hsla(0, 0%, 55%, 0.8);
-  --titlebar-popup-item-hover-color: hsl(0, 0%, 85%);
-  --titlebar-popup-item-hover-bgcolor: hsl(0deg 0% 18%);
-  --titlebar-popup-item-hover-shortcut-color: var(--app-accent-color);
-  --titlebar-popup-item-name-shadow-color: #151515;
 
   // ERWT
   --erwt-heading-color: #dddddd;
@@ -96,24 +94,6 @@ body:not(.dark-mode) {
   --button-hover-bgcolor: hsl(0, 0%, 98%);
   --button-active-bgcolor: hsl(0, 0%, 96%);
 
-  // Titlebar
-  --titlebar-bgcolor: #dcddde;
-  --titlebar-color: #1f1f1f;
-  --titlebar-title-color: var(--titlebar-color);
-  --titlebar-menu-title-hover-bgcolor: #e6e6e6;
-  --titlebar-popup-item-hover-bgcolor: hsl(210deg 16% 92%);
-  --titlebar-popup-bgcolor: hsl(0deg 0% 99%);
-  --titlebar-menu-title-active-bgcolor: hsl(0deg 0% 99%);
-  --titlebar-menu-title-active-border-color: #d3d6d8;
-  --titlebar-popup-border: 1px solid #d3d6d8;
-  --titlebar-menu-separator-bgcolor: #d3d6d8;
-  --titlebar-popup-item-hover-bgcolor: #d6dade;
-  --titlebar-popup-item-name-color: #0e0e0e;
-  --titlebar-popup-item-name-shadow-color: rgba(255, 255, 255, 0.8);
-  --titlebar-popup-item-hover-color: #000000;
-  --titlebar-popup-item-hover-shortcut-color: var(--app-accent-color);
-  --titlebar-popup-item-hover-bgcolor: #e6e6e6;
-
   // ERWT
   --erwt-heading-color: #282828;
   --app-color: #555555;
@@ -125,16 +105,6 @@ body:not(.dark-mode) {
 
     &:after {
       box-shadow: none;
-    }
-  }
-
-  .versions .item {
-    color: #656565;
-    background: #fff;
-    box-shadow: 0 2px 4px #00000005;
-
-    &>span {
-      color: #999999;
     }
   }
 
@@ -150,3 +120,11 @@ body:not(.dark-mode) {
   }
 
 }
+
+:root {
+  //--bs-body-font-family: var(--app-font-family);
+  --bs-body-font-size: var(--app-font-size);
+}
+$font-family-base: var(--app-font-family);
+
+@import "~bootstrap/scss/bootstrap";
