--- a/src/renderer/components/Application.scss
+++ b/src/renderer/components/Application.scss
@@ -122,7 +122,7 @@ button {
   }
 }
 
-.window-content{
+.window-content {
   height: calc(100% - 4rem);
   padding-top: 4rem;
   width: 100%;
@@ -133,19 +133,32 @@ button {
 .main-heading {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-bottom: 3rem;
+  justify-content: center;  
 
   img {
     margin-right: 1rem;
   }
 
-  h1 {
+  h1,
+  h2,
+  h3,
+  h4 {
+    margin-bottom: 2rem;
     font-size: 1.5rem;
     font-weight: 300;
     color: var(--erwt-heading-color);
     line-height: 1;
     text-transform: uppercase;
+  }
+
+  h2 {
+    font-size: 1.3rem;
+    margin-bottom: 1.5rem;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+    margin-bottom: 1.3rem;
   }
 }
 
