--- a/src/renderer/components/Application.scss
+++ b/src/renderer/components/Application.scss
@@ -133,7 +133,7 @@ button {
 .main-heading {
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
 
   img {
     margin-right: 1rem;
@@ -200,6 +200,10 @@ button {
   left: -20px;
   box-shadow: 0 10px 20px #000000e3;
   border-radius: 8px;
+}
+
+.main-teaser.secondary:after {
+  background: var(--app-accent-secondary-color);
 }
 
 .versions {
