--- a/src/renderer/components/Theme.scss
+++ b/src/renderer/components/Theme.scss
@@ -35,6 +35,7 @@
 :root {
   // Application
   --app-accent-color: #32639f;
+  --app-accent-secondary-color: #61329f;
   --app-font-size: 16px;
   --app-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -96,6 +97,7 @@ body.dark-mode {
 body:not(.dark-mode) {
   // Application
   --app-accent-color: #2f77ca;
+  --app-accent-secondary-color: #702fca;
   --app-bgcolor: #f1f0f0;
 
   // Selection
